--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
     <!--Iconita sus-->
     <link rel="shortcut icon" href="imaginiALT/R.png"/>
     <body>
-        <h2>Chestioar</h2>
-        <img src="ches/chestionar1.PNG" alt="ochii" >
-        <img src="ches/chestionar2.PNG" alt="ochii" >
-        <img src="ches/chestionar3.PNG" alt="ochii" >
-        <img src="ches/Captură.PNG">
-        <h3><a href="https://prezi.com/p/xut_jc-7nkum/?present=1&fbclid=IwAR1dg6Ep9r9Uopf9RLDHHxZYTr4v8GUJ1vScPqxkp9BYVMGdDFo__v78jqQ">Link Chestionar</a></h3>
+        <h2>e-Learning</h2>
+        <img src="pozr/elearning.PNG" alt="ochii">
+        <img src="pozr/fian.PNG"
+
 
     </body>
 </html>
